# cpp-crypto

./: .appveyor.yml  .clang_format  .codeclimate.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  asan_blacklist.txt  build.cmd  build.sh  keywords.txt  library.json  library.properties  platformio.ini  run_tests.cmd  run_tests.sh
examples/cmake_example/: .gitmodules  CMakeLists.txt  build.cmd  build.sh  main.cpp
src/: CMakeLists.txt  arkCrypto.h
src/bcl/: Base58Check.cpp  CurvePoint.cpp  Ecdsa.cpp  FieldInt.cpp  FieldInt.hpp  Ripemd160.cpp  Ripemd160.hpp  Uint256.cpp
src/bip39/: bip39.cpp  bip39.h  en.h  en_str.h  util.h
src/common/: configuration.cpp  configuration.hpp  fee_policy.hpp  network.cpp  network.hpp
src/configuration/: fee.cpp  fee.h  network.cpp
src/crypto/: curve.cpp  curve.hpp  hash.cpp  hash.hpp  mesage.cpp  message.cpp  slot.cpp
src/defaults/: static_fees.cpp
src/enums/: types.h
src/helpers/: crypto.cpp  crypto.h  crypto_helpers.h  helpers.cpp  helpers.h  json.h
src/helpers/encoding/: der.cpp  der.h  hex.h
src/identities/: address.cpp  address.h  keys.cpp  keys.hpp  mnemonic.cpp  privatekey.cpp  privatekey.h  privatekey.hpp  publickey.cpp  publickey.h  publickey.hpp  wif.cpp  wif.h  wif.hpp
src/include/: uECC_README.MD
src/include/cpp-crypto/: arkCrypto.h
src/include/cpp-crypto/common/: configuration.hpp  fee_policy.hpp  network.hpp
src/include/cpp-crypto/configuration/: fee.h  network.h
src/include/cpp-crypto/crypto/: message.hpp  slot.hpp
src/include/cpp-crypto/defaults/: fee_policies.hpp  static_fees.hpp  transaction_types.hpp
src/include/cpp-crypto/enums/: fees.h  types.h
src/include/cpp-crypto/identities/: address.h  address.hpp  keys.hpp  mnemonic.h  privatekey.h  privatekey.hpp  publickey.h  publickey.hpp  wif.h  wif.hpp
src/include/cpp-crypto/interfaces/: constants.h  identities.hpp
src/include/cpp-crypto/networks/: devnet.h  (+6 more)
src/interfaces/: constants.h  identities.hpp
src/iot/: platformio.cpp
src/lib/bcl/: Base58Check.hpp  CurvePoint.hpp  Ecdsa.hpp  Sha256.cpp  Sha256.hpp  Sha256Hash.cpp  Sha256Hash.hpp  Sha512.cpp  Sha512.hpp  Uint256.hpp  Utils.cpp  Utils.hpp
src/lib/rfc6979/: rfc6979.h
src/managers/: fee_manager.cpp  fee_manager.hpp  network_manager.cpp  network_manager.hpp
src/networks/: abstractnetwork.cpp  abstractnetwork.h  devnet.cpp  devnet.h  mainnet.cpp  mainnet.h  mainnet.hpp  networks.hpp  testnet.cpp  testnet.h  testnet.hpp
src/rfc6979/: rfc6979.h
src/stl/details/: to_string.h
src/transactions/: builder.cpp  builder.h  deserializer.cpp  deserializer.h  deserializer.hpp  mapping.cpp  mapping.hpp  serializer.cpp  serializer.h  serializer.hpp  transaction.cpp  transaction.h  transaction.hpp  transaction_data.hpp
src/transactions/builders/: common.hpp  delegate_registration.hpp  htlc_lock.hpp  multi_payment.hpp  transfer.hpp  vote.hpp
src/transactions/defaults/: fees.hpp  offsets.hpp  types.hpp
src/transactions/mapping/: json.cpp  json.hpp  labels.hpp  mapping.cpp  mapping.hpp
src/transactions/types/: assets.hpp  delegate_registration.cpp  delegate_registration.hpp  delegate_resignation.hpp  htlc_claim.cpp  htlc_claim.hpp  htlc_lock.cpp  htlc_lock.hpp  htlc_refund.cpp  htlc_refund.hpp  ipfs.cpp  ipfs.hpp  multi_payment.cpp  multi_payment.hpp  second_signature.cpp  second_signature.hpp  transfer.cpp  transfer.hpp  vote.cpp  vote.hpp
src/utils/: base58.cpp  base58.hpp  base58.table  crypto_helpers.h  hex.hpp  hex.table  json.h  message.cpp  message.h  packing.h  platform.h  slot.cpp  slot.h  str.hpp  str.table  unpack.h
test/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  platformio.ini  test_helpers.h
test/bip39/: bip39.cpp
test/common/: configuration.cpp  fee_policy.cpp  network.cpp
test/configuration/: fee.cpp  network.cpp
test/crypto/: curve.cpp  curve_ecdsa_sign.cpp  curve_ecdsa_sign_null_hash.cpp  curve_ecdsa_sign_null_hash32_privatekey.cpp  curve_ecdsa_sign_null_hash32_sha256.cpp  curve_ecdsa_sign_null_pk.cpp  curve_ecdsa_sign_null_privatekey.cpp  curve_publickey.cpp  curve_verify_invalid.cpp  curve_verify_valid.cpp  hash.cpp  message.cpp  message_sign.cpp  message_verify.cpp  slot.cpp
test/defaults/: static_fees.cpp  transaction_types.cpp
test/enums/: fees.cpp  types.cpp
test/fixtures/: identity.hpp  message.hpp
test/helpers/: crypto.cpp  crypto_helpers.cpp
test/helpers/encoding/: der.cpp  hex.cpp
test/identities/: address.cpp  keys.cpp  keys_publickey.cpp  mnemonic.cpp  privatekey.cpp  publickey.cpp  wif.cpp
test/iot/: test_main.cpp
test/iot/gtest/: gtest.h
test/managers/: fee_manager.cpp  network_manager.cpp
test/networks/: abstractnetwork.cpp  devnet.cpp  mainnet.cpp  testnet.cpp
test/transactions/: builder.cpp  builder_transfer_custom_network.cpp  deserializer.cpp  deserializer_delegate_registration.cpp  deserializer_multi_signature_registration.cpp  deserializer_second_signature_registration.cpp  deserializer_transfer.cpp  deserializer_vote.cpp  serializer.cpp  transaction.cpp  transaction_to_array.cpp  transaction_to_array_type_0.cpp  transaction_to_array_type_1.cpp  transaction_to_array_type_2.cpp  transaction_to_array_type_3.cpp  transaction_to_json.cpp  transaction_to_json_type_0.cpp  transaction_to_json_type_1.cpp  transaction_to_json_type_2.cpp  transaction_to_json_type_3.cpp  transaction_v1.cpp
test/transactions/builders/: delegate_registration.cpp  delegate_resignation.cpp  htlc_claim.cpp  htlc_lock.cpp  htlc_refund.cpp  ipfs.cpp  multi_payment.cpp  second_signature.cpp  transfer.cpp  vote.cpp
test/transactions/defaults/: fees_types.cpp
test/transactions/types/: delegate_registration.cpp  delegate_registration_v1.cpp  delegate_resignation.cpp  htlc_claim.cpp  htlc_lock.cpp  htlc_refund.cpp  ipfs.cpp  multi_payment.cpp  second_signature.cpp  second_signature_v1.cpp  transfer.cpp  transfer_v1.cpp  vote.cpp  vote_v1.cpp
test/utils/: base58.cpp  crypto_helpers.cpp  hex.cpp  message.cpp  packing.cpp  slot.cpp  str.cpp  unpack.cpp
(+86 files in other folders)
